--- a/engineering.css
+++ b/engineering.css
@@ -15,3 +15,12 @@ body{
 .pitch{
     font-size:5vh;
 }
+
+.profile-pic{
+    height: 400px;
+    width: 400px;
+    border-radius: 40px;
+    object-fit: cover;
+    
+    border: 5px solid black;
+}
