pro pic centered

--- a/engineering.css
+++ b/engineering.css
@@ -22,6 +22,6 @@ body{
     width: 400px;
     border-radius: 40px;
     object-fit: cover;
-
+    object-position: 0% 30%;
     border: 5px solid black;
 }
