--- a/engineering.css
+++ b/engineering.css
@@ -1,5 +1,7 @@
 .navbar{
     background-color:rgb(250, 218, 74);
+    border-bottom: 1px solid rgb(46, 28, 6);
+    margin-bottom: 20px;
 }
 
 body{
