--- a/engineering.css
+++ b/engineering.css
@@ -31,3 +31,10 @@ body{
 .blurb{
     color: white;
 }
+
+.grid-3-columns{
+    margin: 5rem auto;
+    width: min(90%, 75rem);
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+}
