--- a/engineering.css
+++ b/engineering.css
@@ -74,6 +74,7 @@ body{
 .demos{
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .blogs{
@@ -89,6 +90,7 @@ body{
 
 .blog-container{
     display: flex;
+    flex-wrap: wrap;
     width: 70%;
     /* width: min(90%, 75rem); */
     /* gap: 2em; */
