--- a/engineering.css
+++ b/engineering.css
@@ -7,10 +7,9 @@ body{
 .navbar{
     background-color:rgb(250, 218, 74);
     border-bottom: 1px solid rgb(46, 28, 6);
-    margin-bottom: 20px;
     width: 100%;
     display: flex;
-    /* position: fixed; */
+    position: fixed;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
@@ -20,13 +19,19 @@ body{
     display: inline;
     margin: 0;
     margin-left: .5rem;
+    font-size: 2rem;
 }
 
 .nav-links {
     display: flex;
     justify-content: space-between;
-    width: 11rem;
+    width: 14rem;
     margin-right: .5rem;
+    font-size: 20px;
+}
+
+.intro{
+    padding-top: 20px;
 }
 
 .pitch{
@@ -46,6 +51,7 @@ body{
     object-fit: cover;
     object-position: 0% 30%;
     border: 5px solid rgb(46, 28, 6);
+    margin-left: 30%;
 }
 
 .blurb{
@@ -82,7 +88,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: indianred;
+    /* background-color: #F2A65A; */
     /* grid-template-columns: 100%; */
     /* grid-auto-flow: row; */
 }
