--- a/engineering.css
+++ b/engineering.css
@@ -38,12 +38,14 @@ body{
 .content-container{
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
 }
 
 .intro{
     padding-top: 20px;
     display: flex;
-    justify-content: space-evenly;
+    margin-left: 20vh;
+    /* justify-content: center; */
 }
 
 .pitch{
@@ -63,7 +65,17 @@ body{
     color:#FFFFFF;
 }
 
+.bio{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
 .profile-pic{
+    /* display: flex;
+    justify-content: center; */
     height: 400px;
     width: 400px;
     border-radius: 40px;
@@ -77,8 +89,8 @@ body{
 }
 
 .grid-3-columns{
-    margin: 5rem auto;
-    width: min(90%, 75rem);
+    margin: 3rem;
+    width: min(80%, 75rem);
     display: grid;
     grid-auto-flow: row;
     /* grid-template-columns: 33% 33% 33%; */
