--- a/engineering.css
+++ b/engineering.css
@@ -148,3 +148,15 @@ body{
     width: 10rem;
     border: 1px solid rgb(46, 28, 6);
 }
+
+.blinking-cursor{
+    animation-name: blink;
+    animation-duration: 800ms;
+    animation-iteration-count: infinite;
+    opacity: 1;
+}
+
+@keyframes blink {
+    from { opacity: 1;}
+    to {opacity: 0;}
+}
