--- a/engineering.css
+++ b/engineering.css
@@ -147,7 +147,7 @@ body{
 } 
 
 .blog-card{
-    background-color: grey;
+    background-color: #C14953;
     height:10rem;
     width: 10rem;
     border: 1px solid rgb(46, 28, 6);
