--- a/engineering.css
+++ b/engineering.css
@@ -1,7 +1,8 @@
 :root {
     --teal: rgb(32, 124, 124);
     --brickred: #C14953;
-    --navyellow: rgb(250, 218, 74)
+    --navyellow: rgb(250, 218, 74);
+    --brownborder: rgb(46, 28, 6);
 }
   
 
@@ -13,7 +14,7 @@ body{
 
 .navbar{
     background-color: var(--navyellow);
-    border-bottom: 1px solid rgb(46, 28, 6);
+    border-bottom: 1px solid var(--brownborder);
     width: 100%;
     display: flex;
     position: fixed;
@@ -94,7 +95,7 @@ body{
     border-radius: 40px;
     object-fit: cover;
     object-position: 0% 30%;
-    border: 5px solid rgb(46, 28, 6);
+    border: 5px solid var(--brownborder);
     background-color: #C14953;
 }
 
