background gradient test!

--- a/engineering.css
+++ b/engineering.css
@@ -53,6 +53,8 @@ body{
     padding-top: 20px;
     display: flex;
     margin-left: 11vw;
+    background: rgb(0,0,0);
+    background: linear-gradient(160deg, rgba(0,0,0,1) 17%, rgba(33,124,124,1) 53%);
     /* justify-content: center; */
 }
 
