--- a/engineering.css
+++ b/engineering.css
@@ -10,11 +10,14 @@ body{
     height: 100%;
     margin: 0;
     background-color: var(--teal);
+    /* background: rgb(0,0,0);
+    background: linear-gradient(160deg, rgba(0,0,0,1) 17%, rgba(33,124,124,1) 53%); */
 }
 
 .navbar{
     background-color: var(--navyellow);
     border-bottom: 1px solid var(--brownborder);
+    position: absolute;
     width: 100%;
     display: flex;
     position: fixed;
@@ -50,11 +53,12 @@ body{
 }
 
 .intro{
-    padding-top: 20px;
+    margin-top: 40px;
+    /* padding-top: 20px; */
     display: flex;
-    margin-left: 11vw;
-    background: rgb(0,0,0);
-    background: linear-gradient(160deg, rgba(0,0,0,1) 17%, rgba(33,124,124,1) 53%);
+    /* margin-left: 11vw; */
+    border: 4px solid var(--brownborder);
+    border-radius: 40px;
     /* justify-content: center; */
 }
 
