--- a/engineering.css
+++ b/engineering.css
@@ -54,7 +54,7 @@ body{
 
 .intro{
     margin-top: 40px;
-    /* padding: 2rem; */
+    padding: 2rem;
     /* padding-top: 20px; */
     display: flex;
     /* margin-left: 11vw; */
