--- a/engineering.css
+++ b/engineering.css
@@ -142,6 +142,11 @@ body{
     border-radius: 10px;
 }
 
+section{
+    width: 100vw;
+    height: 100vh;
+}
+
 .blogs{
     /* width: min(90%, 75rem); */
     display: flex;
