--- a/engineering.css
+++ b/engineering.css
@@ -54,11 +54,12 @@ body{
 
 .intro{
     margin-top: 40px;
-    padding: 2rem;
+    /* padding: 2rem; */
     /* padding-top: 20px; */
     display: flex;
+    justify-content: center;
     /* margin-left: 11vw; */
-    /* border: 4px solid var(--brownborder); */
+    border: 4px solid var(--brownborder);
     /* border-radius: 40px; */
     /* justify-content: center; */
 }
