--- a/engineering.css
+++ b/engineering.css
@@ -65,6 +65,7 @@ body{
 
 .pitch{
     margin: 0;
+    padding: 8rem;
     /* margin-top: 0rem;
     margin-bottom: 0rem; */
     font-size:4em;
@@ -145,7 +146,7 @@ body{
 section{
     width: 100vw;
     height: 100vh;
-    background-color: indianred;
+    /* background-color: indianred; */
 }
 
 .blogs{
