--- a/engineering.css
+++ b/engineering.css
@@ -147,7 +147,7 @@ body{
 section{
     width: 100vw;
     height: 100vh;
-    /* background-color: indianred; */
+    background-color: indianred;
 }
 
 .blogs{
