--- a/engineering.css
+++ b/engineering.css
@@ -58,7 +58,7 @@ body{
     display: flex;
     justify-content: center;
     /* margin-left: 11vw; */
-    border: 4px solid var(--brownborder);
+    /* border: 4px solid var(--brownborder); */
     /* border-radius: 40px; */
     /* justify-content: center; */
 }
