--- a/engineering.css
+++ b/engineering.css
@@ -1,7 +1,8 @@
 :root {
     --teal: rgb(32, 124, 124);
     --brickred: #C14953;
-    --navyellow: rgb(250, 218, 74);
+    /* --navyellow: rgb(250, 218, 74); */
+    --navyellow: #363440;
     --brownborder: rgb(46, 28, 6);
 }
   
