--- a/engineering.css
+++ b/engineering.css
@@ -142,6 +142,7 @@ body{
     background-color: #FFFFFF;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-bottom: 10px;
 }
 
