--- a/engineering.css
+++ b/engineering.css
@@ -30,6 +30,7 @@ body{
     align-items: center;
     flex-direction: row;
     color: white;
+    z-index: 1;
 }
 
 .nav-name{
@@ -101,13 +102,14 @@ body{
     display: inline;
     /* color: rgb(130, 130, 211); */
     color: #5d92b4;
-    opacity: .4;
-    /* color: var(--navyellow); */
+    /* opacity: .4; */
 }
 
 .section-header{
     font-size:5em;
     color: #fcc95c;
+    margin: 0;
+    margin-right: 16rem;
     /* color: rgb(129, 180, 180); */
 }
 
@@ -121,13 +123,13 @@ body{
     box-sizing: border-box;
     background-color: #3e3846;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 
 .bio{
     /* margin: 2rem; */
-    border: 1px solid rgb(250, 218, 74);
+    /* border: 1px solid rgb(250, 218, 74); */
     box-sizing: border-box;
     background-color: #3e3846;
     width: 95%;
@@ -145,10 +147,10 @@ body{
 .profile-pic{
     /* display: flex;
     justify-content: center; */
-    height: 350px;
-    width: 350px;
+    height: 30em;
+    width: 30em;
     /* border-radius: 40px; */
-    border-radius: 50%;
+    border-radius: 4em;
     object-fit: cover;
     object-position: 0% 30%;
     border: 2px solid var(--brownborder);
@@ -185,6 +187,7 @@ body{
 .demos{
     background-color: #3e3846;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
