--- a/engineering.css
+++ b/engineering.css
@@ -74,11 +74,13 @@ body{
     /* background-color: rgb(159, 208, 231); */
     /* background-color: #FFFFFF; */
     background-color: #514a5c;
+    height: 100vh;
     
     margin-top: 38px;
     /* padding-top: 20px; */
     display: flex;
     justify-content: center;
+    align-items: center;
     /* margin-left: 11vw; */
     /* border: 4px solid var(--brownborder); */
     /* border-radius: 40px; */
@@ -86,11 +88,13 @@ body{
 }
 
 .pitch{
-    margin: 0;
-    padding: 8rem;
+    margin-bottom: 17rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    /* padding-top: 6rem; */
     /* margin-top: 0rem;
     margin-bottom: 0rem; */
-    font-size:4em;
+    font-size:5em;
     /* color: rgb(130, 130, 211); */
     color: #fcc95c;
     animation-name: typing;
@@ -111,6 +115,7 @@ body{
     font-size:4em;
     color: #fcc95c;
     margin: 0;
+    padding-left: 2rem;
     /* margin-right: 16rem; */
     /* color: rgb(129, 180, 180); */
 }
@@ -126,16 +131,20 @@ body{
     background-color: #3e3846;
     display: flex;
     flex-direction: column;
+    padding: 2rem;
+    height: 90vh;
+    /* align-items: center; */
 }
 
 .bio{
-    margin-top: 5rem;
+    margin-top: 1rem;
+    margin-left: 2rem;
     /* border: 1px solid rgb(250, 218, 74); */
     box-sizing: border-box;
-    /* background-color: #3e3846; */
-    background-color: #5d92b4;
+    background-color: #645B71;
+    /* background-color: #5d92b4; */
     border-radius: 2rem;
-    /* width: 95%; */
+    width: 95%;
     height: 10rem;
     /* margin-top: 50px; */
     display: flex;
@@ -150,8 +159,9 @@ body{
 .profile-pic{
     /* display: flex;
     justify-content: center; */
-    height: 20em;
-    width: 20em;
+    margin-top: 1rem;
+    height: 25em;
+    width: 25em;
     /* border-radius: 40px; */
     border-radius: 50%;
     object-fit: cover;
@@ -168,10 +178,15 @@ body{
 
 .blurb{
     color: #FFFFFF;
+    font-size: 2rem;
+}
+
+.blurb p{
+    margin: 0px;
 }
 
 .grid-3-columns{
-    margin: 3rem;
+    margin: 1rem;
     /* width: min(90%, 5rem); */
     width: 59vw;
     display: grid;
@@ -218,7 +233,7 @@ body{
 
 section{
     /* width: 100vw; */
-    height: 100vh;
+    /* height: 100vh; */
     max-width: 100vw;
     max-height: 100vh;
     background-color: indianred;
