--- a/engineering.css
+++ b/engineering.css
@@ -252,13 +252,14 @@ section{
     /* grid-auto-flow: row; */
 }
 
-/* USE GRID FOR THE BLOG CONTAINER! */
-
 .blog-container{
     display: flex;
     flex-wrap: wrap;
     padding: 2rem;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    background-color: #645B71;
+    border-radius: 2rem;
+    margin-left: 2rem;
     /* align-items: center; */
     
     /* width: min(43.5rem); */
@@ -267,7 +268,11 @@ section{
     /* width: min(90%, 75rem); */
     /* gap: 2em; */
     /* grid-template-columns: 33% 33% 33%; */
-} 
+}
+
+.blog-container a{
+    text-decoration: none;
+}
 
 .blog-card{
     background-color: var(--brickred);
@@ -278,13 +283,27 @@ section{
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    color: #fcc95c;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.blog-card p{
+    background-image: linear-gradient(#ffffff00, #636074bb, #363440);
+    width: 100%;
+    height: 25%;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 #blog-card-1{
     background-image: url("asterisk-512.webp");
     background-size: contain;
     background-repeat: no-repeat;
-    background-color: #FFFFFF;
+    background-color: teal;
     background-position: center;
     background-size: 80%;
 }
@@ -296,6 +315,7 @@ section{
     background-size: 150%;
     background-color: #FFFFFF;
     background-repeat: no-repeat;
+    font-size: 19px;
 }
 
 #blog-card-3{
