--- a/engineering.css
+++ b/engineering.css
@@ -7,7 +7,16 @@
     --navyellow: #363440;
     --brownborder: rgb(46, 28, 6);
 }
-  
+
+@font-face {
+    font-family: 'Rockwell';
+    src: url(ROCK.TTF);
+}
+
+@font-face {
+    font-family: 'Rockwell-Bold';
+    src: url(Rockwell-Bold.ttf);
+}
 
 body{
     height: 100%;
@@ -42,6 +51,7 @@ body{
     margin-left: .5rem;
     font-size: 2rem;
     color: #FFFFFF;
+    font-family: 'Crete Round', serif;
     /* transition: all 2s ease; */
 }
 
@@ -80,12 +90,13 @@ body{
     margin-top: 38px;
     /* padding-top: 20px; */
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     /* margin-left: 11vw; */
     /* border: 4px solid var(--brownborder); */
     /* border-radius: 40px; */
     /* justify-content: center; */
+    background-image: linear-gradient(to bottom right, #141218c0, #514a5c);
 }
 
 .pitch{
@@ -96,6 +107,9 @@ body{
     /* margin-top: 0rem;
     margin-bottom: 0rem; */
     font-size:5em;
+    font-family: 'Crete Round', serif;
+    /* border-radius: 2rem; */
+    font-style: italic;
     /* color: rgb(130, 130, 211); */
     color: #fcc95c;
     animation-name: typing;
@@ -105,8 +119,17 @@ body{
     /* width: 80%; */
 }
 
+h1{
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* font-family: 'Bree Serif', serif; */
+    /* font-style: italic; */
+    /* letter-spacing: 2px; */
+}
+
 .pitch-comment{
     display: inline;
+    font-family: 'DM Serif Display', serif;
+    font-style: normal;
     /* color: rgb(130, 130, 211); */
     color: #5d92b4;
     /* opacity: .4; */
@@ -117,6 +140,8 @@ body{
     color: #fcc95c;
     margin: 0;
     padding-left: 2rem;
+    font-family: 'DM Serif Display', serif;
+    font-style: italic;
     /* margin-right: 16rem; */
     /* color: rgb(129, 180, 180); */
 }
@@ -218,7 +243,28 @@ body{
 }
 
 .tech-list-wrapper{
+    padding: 2rem;
     color: white;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.tech-list-wrapper h2{
+    margin: 0px;
+}
+
+.currently-learning{
+    background-color: #645B71;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 2rem;
+    padding: 2rem;
+}
+
+.my-stack{
+    background-color: #645B71;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 2rem;
+    padding: 2rem;
 }
 
 .demos{
