--- a/engineering.css
+++ b/engineering.css
@@ -135,12 +135,12 @@ body{
     /* width: 80%; */
 }
 
-h1{
+/* h1 { */
     /* font-family: Arial, Helvetica, sans-serif; */
     /* font-family: 'Bree Serif', serif; */
     /* font-style: italic; */
     /* letter-spacing: 2px; */
-}
+/* } */
 
 .pitch-comment{
     display: inline;
