bio font updated, side-bar no background

--- a/engineering.css
+++ b/engineering.css
@@ -27,7 +27,6 @@ body{
     margin: 0px;
     background-color: var(--teal);
     /* border: 1px solid rgb(250, 218, 74); */
-    
     /* background: rgb(0,0,0);
     background: linear-gradient(160deg, rgba(0,0,0,1) 17%, rgba(33,124,124,1) 53%); */
 }
@@ -40,6 +39,7 @@ body{
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
     /* position: absolute; */
     width: 100%;
+    height: 41px;
     display: flex;
     position: fixed;
     justify-content: space-between;
@@ -79,11 +79,15 @@ body{
     color: inherit;
 }
 
+.nav-links:hover{
+    color: #fcc95c;
+}
+
 .side-bar{
     position: fixed;
     right: 0;
-    top: 5rem;
-    background-color: grey;
+    top: 2.5rem;
+    /* background-color: grey; */
     padding: 1rem;
 }
 
@@ -179,13 +183,11 @@ body{
 }
 
 .bio-section{
-    /* box-sizing: border-box; */
     background-color: #3e3846;
     display: flex;
     flex-direction: column;
     padding: 2rem;
     height: 90vh;
-    /* align-items: center; */
 }
 
 .bio{
@@ -210,12 +212,9 @@ body{
 }
 
 .profile-pic{
-    /* display: flex;
-    justify-content: center; */
     margin-top: 1rem;
     height: 25em;
     width: 25em;
-    /* border-radius: 40px; */
     border-radius: 50%;
     object-fit: cover;
     object-position: 0% 30%;
@@ -224,15 +223,10 @@ body{
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-/* .profile-bracket{
-    font-size: 15rem;
-    color: #fcc95c;
-    margin-bottom: 2rem;
-} */
-
 .blurb{
     color: #FFFFFF;
     font-size: 2rem;
+    font-family: 'Crete Round', serif;
 }
 
 .blurb p{
