--- a/engineering.css
+++ b/engineering.css
@@ -247,17 +247,24 @@ nav a{
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.blurb{
+.blurb-intro{
     color: #FFFFFF;
-    font-size: 2rem;
+    font-size: 2.2rem;
     /* font-family: 'Crete Round', serif; */
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: 800;
+    margin: 0px;
 }
 
-.blurb p{
-    margin: 0px;
+.blurb{
+    margin-top: 2.5rem;
+    color: #FFFFFF;
+    font-size: 1.5rem;
+    /* font-family: 'Crete Round', serif; */
+    font-family: Arial, Helvetica, sans-serif;
+    /* font-style: italic; */
+    font-weight: 600;
 }
 
 .grid-3-columns{
