--- a/engineering.css
+++ b/engineering.css
@@ -53,6 +53,7 @@ body{
 .nav-name{
     display: inline;
     margin: 0;
+    width: 200px;
     /* margin-left: .5rem; */
     font-size: 2rem;
     color: #FFFFFF;
