--- a/engineering.css
+++ b/engineering.css
@@ -75,8 +75,8 @@ body{
     display: flex;
     justify-content: space-between;
     width: 14rem;
-    margin-right: .5rem;
-    padding-left: .5rem;
+    margin-right: 1rem;
+    padding-left: 1rem;
     font-size: 17px;
     border-left: 1px solid rgb(250, 218, 74);
 }
@@ -266,6 +266,7 @@ nav a{
     font-family: Arial, Helvetica, sans-serif;
     /* font-style: italic; */
     font-weight: 600;
+    /* background-image: linear-gradient(to bottom right, #141218c0, #514a5c); */
 }
 
 .grid-3-columns{
