--- a/engineering.css
+++ b/engineering.css
@@ -84,8 +84,14 @@ body{
 .table-of-contents{
     align-items: center;
     display: flex;
-    justify-content:space-evenly;
-    width: 40%;
+    justify-content: space-between;
+    min-width: 30%;
+    font-size: 1.1rem;
+}
+
+.table-of-contents span{
+    color: #5d92b4;
+    font-weight: 900;
 }
 
 .nav-links{
@@ -308,7 +314,7 @@ nav a{
 .tech-list-wrapper h2{
     color: #fcc95c;
     font-style: italic;
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: 900;
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
