--- a/engineering.css
+++ b/engineering.css
@@ -26,7 +26,7 @@ html {
 body{
     height: 100%;
     margin: 0px;
-    background-color: var(--teal);
+    /* background-color: var(--teal); */
     /* border: 1px solid rgb(250, 218, 74); */
     /* background: rgb(0,0,0);
     background: linear-gradient(160deg, rgba(0,0,0,1) 17%, rgba(33,124,124,1) 53%); */
@@ -223,20 +223,21 @@ nav a{
     display: flex;
     flex-direction: column;
     padding: 2rem;
-    height: 80vh;
+    z-index: -2;
+    /* height: 500rem; */
 }
 
 .bio{
     margin-top: 1rem;
     margin-left: 2rem;
     /* border: 1px solid rgb(250, 218, 74); */
-    box-sizing: border-box;
-    background-color: #645B71;
+    /* box-sizing: border-box; */
+    /* background-color: #645B71; */
+    /* border-radius: 2rem; */
     /* background-color: #5d92b4; */
-    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 2rem;
+    /* box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2); */
     width: 95%;
-    height: 10rem;
+    /* height: 10rem; */
     /* margin-top: 50px; */
     display: flex;
     flex-direction: row;
@@ -245,10 +246,25 @@ nav a{
     /* align-items: center; */
     justify-content: center;
     /* margin-bottom: 8em; */
+    /* z-index: -1; */
+    position:relative;
+}
+
+.bio:before{
+    position:absolute;
+    z-index:-1;
+    top:0;
+    left:0;
+    width:100%;
+    height:10rem;
+    content:"";
+    background-color: #645B71;
+    border-radius: 2rem;
 }
 
 .profile-pic{
-    margin-top: 1rem;
+    margin: 1rem;
+    margin-top: 0;
     height: 25em;
     width: 25em;
     border-radius: 50%;
@@ -257,6 +273,11 @@ nav a{
     border: 1px solid var(--brownborder);
     background-color: var(--brickred);
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.blurb-container{
+    display: flex;
+    flex-direction: column;
 }
 
 .blurb-intro{
@@ -282,15 +303,15 @@ nav a{
 
 .grid-3-columns{
     margin: 1rem;
-    /* width: min(90%, 5rem); */
-    width: 59vw;
     display: grid;
     grid-auto-flow: row;
+    gap: 2rem;
+
     /* grid-template-columns: 33% 33% 33%; */
-    gap: 2em;
+    /* width: min(90%, 5rem); */
 }
 
-@media (min-width: 55em) {
+@media (min-width: 53em) {
     .grid-3-columns {
         grid-auto-flow: column;
     }
@@ -407,8 +428,8 @@ nav a{
 
 section{
     max-width: 100vw;
-    max-height: 100vh;
-    background-color: indianred;
+    /* max-height: 100vh; */
+    /* background-color: indianred; */
 }
 
 .blog{
