--- a/engineering.css
+++ b/engineering.css
@@ -223,20 +223,17 @@ nav a{
     display: flex;
     flex-direction: column;
     padding: 2rem;
-    z-index: -2;
-    /* height: 500rem; */
 }
 
 .bio{
     margin-top: 1rem;
     margin-left: 2rem;
+    width: 95%;
     /* border: 1px solid rgb(250, 218, 74); */
-    /* box-sizing: border-box; */
     /* background-color: #645B71; */
     /* border-radius: 2rem; */
     /* background-color: #5d92b4; */
     /* box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2); */
-    width: 95%;
     /* height: 10rem; */
     /* margin-top: 50px; */
     display: flex;
@@ -247,10 +244,12 @@ nav a{
     justify-content: center;
     /* margin-bottom: 8em; */
     /* z-index: -1; */
-    position:relative;
+    /* position:relative; */
+    background-color: #645B71;
+    border-radius: 2rem;
 }
 
-.bio:before{
+/* .bio:before{
     position:absolute;
     z-index:-1;
     top:0;
@@ -260,7 +259,7 @@ nav a{
     content:"";
     background-color: #645B71;
     border-radius: 2rem;
-}
+} */
 
 .profile-pic{
     margin: 1rem;
@@ -283,22 +282,21 @@ nav a{
 .blurb-intro{
     color: #FFFFFF;
     font-size: 2.2rem;
-    /* font-family: 'Crete Round', serif; */
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     font-weight: 800;
     margin: 0px;
+    border: 1px solid rgb(250, 218, 74);
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 .blurb{
     margin-top: 2.5rem;
     color: #FFFFFF;
     font-size: 1.5rem;
-    /* font-family: 'Crete Round', serif; */
     font-family: Arial, Helvetica, sans-serif;
-    /* font-style: italic; */
     font-weight: 600;
-    /* background-image: linear-gradient(to bottom right, #141218c0, #514a5c); */
 }
 
 .grid-3-columns{
