--- a/engineering.css
+++ b/engineering.css
@@ -484,12 +484,13 @@ section{
 .blog-card p{
     background-image: linear-gradient(#ffffff00, #636074bb, #363440);
     width: 100%;
-    height: 25%;
+    height: 30%;
     margin: 0px;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     flex-direction: column;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #blog-card-1{
