--- a/engineering.css
+++ b/engineering.css
@@ -80,6 +80,10 @@ body{
     padding-left: 1rem;
     font-size: 17px;
     border-left: 1px solid rgb(250, 218, 74);
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-style: italic;
 }
 
 .table-of-contents{
@@ -88,6 +92,9 @@ body{
     justify-content: space-between;
     min-width: 30%;
     font-size: 1.1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    /* font-style: italic; */
 }
 
 .table-of-contents span{
